[tool.poetry]
name = "nau-financial-manager"
version = "0.1.0"
description = ""
authors = ["Caike Colantonio, José Augusto Oliveira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.2"
django = "^4.2.4"
python-decouple = "^3.8"
pre-commit = "^3.3.3"
black = "^23.7.0"
flake8 = "^6.1.0"
factory-boy = "^3.3.0"
pytest-django = "^4.5.2"
django-safedelete = "^1.3.2"
unidecode = "^1.3.6"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.4"
django-filter = "^23.2"
django-pghistory = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 119
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["decouple", "django", "drf_spectacular", "factory", "rest_framework", "safedelete", "unidecode"]
