[tool.poetry]
name = "nau-financial-manager"
version = "0.1.0"
description = "Manage financial information for NAU"
authors = ["Tiago Silva <tsilva@quanticosolutions.com>, José Augusto Oliveira <joliveira@quanticosolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.2"
django = "^4.2.4"
python-decouple = "^3.8"
pre-commit = "^3.3.3"
black = "^23.7.0"
flake8 = "^6.1.0"
factory-boy = "^3.3.0"
pytest-django = "^4.5.2"
django-safedelete = "^1.3.2"
unidecode = "^1.3.6"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-auditlog = "^2.3.0"
drf-yasg = "^1.21.7"
mysqlclient = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 119
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["decouple", "django", "django_filters", "drf_yasg", "factory", "rest_framework", "safedelete", "unidecode"]
